--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
 *,
 *::after,
 *::before {
@@ -18,6 +20,7 @@ body {
   font-family: var(--primary-font);
   font-size: 1.6rem;
   font-weight: 400;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, p {
@@ -43,4 +46,5 @@ button, input {
 
 a {
   text-decoration: none;
+  color: #000;
 }
